--- a/blog/_config.next.yml
+++ b/blog/_config.next.yml
@@ -66,10 +66,9 @@ custom_logo: #/uploads/custom-logo.jpg
 # CC licenses are available in 39 languages, you can find the specific and correct abbreviation you need on https://creativecommons.org
 creative_commons:
   license: by-nc-sa
-  sidebar: false
-  post: false
-  language:
-
+  sidebar: true
+  post: true
+  language: deed.zh
 
 # ---------------------------------------------------------------
 # Menu Settings
