--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://example.com
+url: https://leavesster.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
