--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          publish_branch: master  # deploying branch
+          publish_branch: gh_pages  # deploying branch
 
